[package]
name = "mahjong_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["cargo"] }
crossterm = "0.26.1"
futures-util = "0.3.28"
mahjong_core = { path = "../mahjong_core" }
service_contracts = { path = "../service_contracts" }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tui = "0.19.0"
serde_qs = "0.12.0"
chrono = "0.4.26"
num = "0.4.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
