[package]
name = "mahjong_core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.167", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
wasm-bindgen = "0.2.87"
