[package]
name = "mahjong_core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
wasm-bindgen = "0.2.87"
strum = "0.26.3"
strum_macros = "0.26.3"
ts-rs = "9.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
