[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
rust-argon2 = "1.0.0"
