[package]
name = "mahjong_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-trait = "0.1.66"
mahjong_core = { path = "../mahjong_core" }
service_contracts = { path = "../service_contracts" }
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
actix-cors = "0.6.4"
