[package]
name = "mahjong_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-trait = "0.1.71"
mahjong_core = { path = "../mahjong_core", default-features = false }
service_contracts = { path = "../service_contracts" }
rand = "0.8.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
actix-cors = "0.6.4"
jsonwebtoken = "8.3.0"
rust-argon2 = "1.0.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
rustc-hash = "1.1.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde_qs = "0.12.0"
chrono = "0.4.31"
redis = "0.23.3"
diesel_migrations = "2.1.0"
ts-rs = "9.0.1"
env_logger = "0.10.0"

[lib]
name = "mahjong_service"
path = "src/lib.rs"

[[bin]]
name = "mahjong_service"
path = "src/bin.rs"
