[package]
name = "service_contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mahjong_core = { path = "../mahjong_core" }
rustc-hash = "1.1.0"
serde = { version = "1.0.167", features = ["derive"] }
ts-rs = "9.0.1"
