[package]
name = "web_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mahjong_core = { path = "../mahjong_core" }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.100"
service_contracts = { path = "../service_contracts" }
serde = { version = "1.0.167", features = ["derive"] }
ts-rs = "9.0.1"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize", "serde", "serde_json"] }
web-sys = { version= "0.3.64", features = ["console"] }
rustc-hash = "1.1.0"
js-sys = "0.3.76"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
